<!--
 ~
 ~ Copyright (c) 2022 Alan M Varghese <alan@digistorm.in>
 ~
 ~ This files is part of Aksharam, a script teaching app for Indic
 ~ languages.
 ~
 ~ Aksharam is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ Aksharam is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even teh implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
 ~
 -->

<resources>
    <string name="app_name">Aksharam</string>
    <string name="test_text">Test</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="back">Back</string>

    <!-- Stuff for the InitialiseAppActivity -->
    <string name="initialisation_checking_data">Checking available data files online…</string>
    <string name="initialisation_choice_hint">
        Please choose language data you wish to download:
    </string>
    <string name="initialisation_no_file_selected">
        Please select at least one file to download:
    </string>
    <string name="initialisation_downloading_data">Downloading data files…</string>
    <string name="initialise_act_proceed_button">Proceed</string>

    <string name="input_text_field">Input Text</string>
    <string name="transliterate_tab_info_default">Enter text to transliterate</string>
    <string name="language_detected">Language detected: %s</string>
    <string name="lang_could_not_detect">
        Could not detect language. Have you downloaded its data?
    </string>
    <string name="transliteration">Transliteration</string>
    <string name="output_text_field">Output</string>
    <string name="letters_tab_header">Letters</string>
    <string name="transliterate_tab_header">Transliterate</string>
    <string name="practice_tab_header">Practice</string>
    <string name="trans_spinner_desc">
        Select language to convert to
    </string>

    <string name="letters_tab_language_hint">Language</string>
    <string name="letters_tab_trans_hint">Convert To</string>
    <string name="transliterate_tab_trans_hint">Convert To</string>
    <string name="letter_info_example_words">Words</string>
    <string name="letter_info_example_meaning">Meaning</string>
    <string name="ligatures_with_letter_as_prefix">
        Joint letters (ligatures) of %s before another consonant\n(%s + %s + x):
    </string>
    <string name="ligatures_with_letter_as_suffix">
        Joint letters (ligatures) of %s after another consonant\n(x + %s + %s):
    </string>
    <string name="letter_with_vowel_signs">%s with vowel signs:</string>
    <string name="letter_with_consonants_and_ligatures">%s with consonants and ligatures:</string>
    <string name="practice_tab_language_hint">Language</string>
    <string name="practice_tab_practice_in_hint">Practice In</string>
    <string name="practice_tab_practice_type_hint">Practice Type</string>
    <string name="practice_tab_practice_input_hint">Practice in %s</string>
    <string name="practice_tab_correct_text_entered">You got it!</string>

    <!-- strings for settings activity -->
    <string name="settings_activity_manage_languages_hint">Manage Languages</string>
    <string name="could_not_download_file_list">
        Could not download file list from the internet. Showing local files only.
    </string>
    <string name="could_not_download_file">
        Could not download file from the internet. Please try again later.
    </string>
    <string name="exit">exit</string>
    <string name="retry_download">Retry Download</string>
    <string name="no_internet">No Internet</string>
    <string name="delete_button">Delete button</string>
    <string name="download_button">Download button</string>

    <!-- HTMLInfoActivity !-->
    <string name="help_text">
        &lt;h1>Help&lt;/h1>
        &lt;h3>Downloading Data Files&lt;/h3>
        &lt;p>When the app is first launched, you are given the option to download the data file for a
        language of your choice. Later, if you decide to check out other languages, you can manage the
        data files in the Settings screen.&lt;/p>
        &lt;h3>Letters Tab&lt;/h3>
        &lt;p>In the letters tab of the app, you can choose the language you wish to learn from the \"
        Language\" drop down. The app will now display all the characters of the selected language.
        From the \"Convert To\" drop down, you can choose a language you know. Now, you can tap lightly
        on a character to see what it looks like in the second language you chose (the one you know).
        Tap longer (touch and hold) on a character to see more detailed information about that
        character.
        &lt;/p>
        &lt;h3>Transliteration Tab&lt;/h3>
        &lt;p>Here, you can copy in text in one of the languages for which you have downloaded data files
        for and transliterate it into a different language of your choice. Note, the app tries to preserve
        and use the corresponding letter of the second language where possible (even if the a letter is
        pronounced different in that language). The idea here is to help the user recognise the letter in
        the source script.&lt;/p>
        &lt;h3>Practice Tab&lt;/h3>
        &lt;p>To use the practice tab effectively, it is recommended to install a keyboard that supports
        at least two languages - one that you wish to learn and another that you know. I recommend the
        \"Indic Keyboard\" by \"Indic Project\" available in the
        &lt;a href="https://play.google.com/store/apps/details?id=org.smc.inputmethod.indic">Play Store&lt;/a>
        and &lt;a href="https://f-droid.org/en/packages/org.smc.inputmethod.indic/">F-Droid&lt;a>.&lt;/p>
        &lt;p>In the practice tab, choose a script you wish to learn and a script that you know. Next you
        can choose a suitable practice type and test your knowledge by entering characters in the script
        that you already know.&lt;/p>
    </string>
    <string name="privacy_text">
        &lt;h1>Privacy Policy&lt;/h1>
        &lt;p>This app needs to connect to the internet to download data files for the languages you wish to learn.
        &lt;br/>The data files are downloaded from the Github repo here: https://github.com/NyxTrail/aksharam-data
        &lt;br/>&lt;br/>
        Beyond the above requirement, the app does not share any data with anyone. All your data stays on your device.
        &lt;/p>
    </string>

    <!-- Action bar Menu Items !-->
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="settings">Settings</string>
    <string name="title_activity_conf_kotlin_correctly">ConfKotlinCorrectly</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="language_info">Language Info</string>
    <string name="vertical_ellipsis">&#8942;</string>
</resources>
