<?xml version="1.0" encoding="utf-8"?>

<!--
 ~
 ~ Copyright (c) 2022-2025 Alan M Varghese <alan@digistorm.in>
 ~
 ~ This files is part of Aksharam, a script teaching app for Indic
 ~ languages.
 ~
 ~ Aksharam is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ Aksharam is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even teh implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
 ~
 -->

<!-- The menu item id's here must match the id's of the fragments defined in
  navigation/nav_graph.xml for automatic navigation to work. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24" />
    <item
        android:id="@+id/helpFragment"
        android:title="@string/help"
        android:icon="@drawable/ic_baseline_help_24" />
    <item
        android:id="@+id/privacyPolicyFragment"
        android:title="@string/privacy"
        android:icon="@drawable/ic_baseline_privacy_24" />
</menu>
