<?xml version="1.0" encoding="utf-8"?>

<!--
 ~
 ~ Copyright (c) 2022 Alan M Varghese <alan@digistorm.in>
 ~
 ~ This files is part of Aksharam, a script teaching app for Indic
 ~ languages.
 ~
 ~ Aksharam is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ Aksharam is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even teh implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
 ~
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="in.digistorm.aksharam.activities.main.fragments.transliterate.TransliterateTabViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/input_text_field"
                android:inputType="text|textMultiLine"
                android:textColorHint="#78909C"
                android:textSize="@dimen/text_normal_size"
                app:layout_constraintBottom_toTopOf="@id/info_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/info_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:ems="10"
                android:text="@string/transliterate_tab_info_default"
                android:lines="3"
                android:gravity="center"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintBottom_toBottomOf="@id/language_spinner"
                app:layout_constraintEnd_toStartOf="@id/language_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_text_field"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.60" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/language_spinner"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/transliterate_tab_trans_hint"
                app:layout_constraintStart_toEndOf="@id/info_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_text_field" >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    list="@{viewModel.selectableLanguages}"
                    android:text="@={viewModel.targetLanguageSelected}"
                    tools:text="Kannada" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/output_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/output_text_field"
                android:textColorHint="#78909C"
                android:textSize="@dimen/text_normal_size"
                android:text="@{viewModel.transliteratedString}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>