<?xml version="1.0" encoding="utf-8"?>

<!--
 ~
 ~ Copyright (c) 2022 Alan M Varghese <alan@digistorm.in>
 ~
 ~ This files is part of Aksharam, a script teaching app for Indic
 ~ languages.
 ~
 ~ Aksharam is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ Aksharam is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even teh implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
 ~
 -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/TransliterateTabInputScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TransliterateTabInputTextField"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/input_text_field"
                android:inputType="text|textMultiLine"
                android:textColorHint="#78909C"
                android:textSize="@dimen/text_normal_size"
                app:layout_constraintBottom_toTopOf="@id/TransliterateButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/TransliterateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/transliterate_button"
                app:layout_constraintBottom_toTopOf="@id/TransliterateTabOutputTextView"
                app:layout_constraintEnd_toStartOf="@id/LanguageSelectionSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TransliterateTabInputTextField"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.60" />

            <Spinner
                android:id="@+id/LanguageSelectionSpinner"
                style="@style/drop_down_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/trans_spinner_desc"
                app:layout_constraintBottom_toTopOf="@id/TransliterateTabOutputTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/TransliterateButton"
                app:layout_constraintTop_toBottomOf="@id/TransliterateTabInputTextField" />


            <TextView
                android:id="@+id/TransliterateTabOutputTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/output_text_field"
                android:textColorHint="#78909C"
                android:textSize="@dimen/text_normal_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TransliterateButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>